<resources>
    <string name="app_name">Prayer Light</string>
    <string name="chose_language" translatable="false">Please chose language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="french">Française</string>
    <string name="turkish">Türkçe</string>
    <string name="indonesia">Indonesia</string>
    <string name="urdo">اردو</string>
    <string name="conditions">In order to use Prayer light App, you must agree to the terms and conditions.</string>
    <string name="checkBox">Agree</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="next">Next</string>
    <string name="location_settings">Location Settings</string>
    <string name="previous">Previous</string>
    <string name="automatic_location">Automatic Location</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="fajr">Fajr</string>
    <string name="sun_rise">Sunrise</string>
    <string name="dhohr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="eshaa">Isha</string>
    <string name="quiam_lil">Quiam Lil</string>
    <string name="fajr_alarm">Enable or disable Fajr alarm</string>
    <string name="sunrise_alarm">Enable or disable Sunrise alarm</string>
    <string name="zohr_alarm">Enable or disable Zohr alarm</string>
    <string name="asr_alarm">Enable or disable Asr alarm</string>
    <string name="maghrib_alarm">Enable or disable Maqhrib alarm</string>
    <string name="eshaa_alarm">Enable or disable Eshaa alarm</string>
    <string name="quiam_lil_alarm">Enable or disable Quiam lil alarm</string>
    <string name="finish">Finish</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="next_pray_name">Next Pray Name</string>
    <string name="next_pray_time">Next Pray Time</string>
    <string name="countdown">Countdown</string>
    <string name="location">location</string>
    <string name="location_text">Location</string>
    <string name="hijri_calender">Hijri Calender</string>
    <string name="birth_calender">Birth Calender</string>
    <string name="time">time</string>
    <string name="prayer_time">prayer time</string>
    <string name="home">Home</string>
    <string name="azkar">Azkar</string>
    <string name="pray">Pray Times</string>
    <string name="hello_blank_fragment">Hello blankk fragment</string>
    <string name="location_permission_msg">location permission must be granted in order to continue</string>
    <string name="location_setting_msg">location and internet must turned on for the first time</string>
    <string name="location_configuration_finished">All location configurations finished, please click on finish</string>
    <string name="its">it`s </string>
    <string name="wifi_cellular">Enable Wifi or Cellular</string>
    <string name="check_wifi_cellular_msg">Please enable Wifi or Cellular connection and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No internet connection</string>
    <string name="check_internet">Please check internet connection and try again.</string>
    <string name="ok">OK</string>
    <string name="update_location">Update location</string>
    <string name="_7">7</string>
    <string name="previous_month">previous month</string>
    <string name="_30">30</string>
    <string name="next_month">Next month</string>
    <string name="hijri">Hijri</string>
    <string name="gregorian">Gregorian</string>
    <string name="separator">Separator</string>
    <string name="day">Day</string>
    <string-array name="spinner">
        <item>Hijri</item>
        <item>Gregorian</item>
    </string-array>

</resources>