<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:nestedScrollingEnabled="true"
    tools:context=".AlarmSettings">

    <ImageView
        android:id="@+id/backI"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/setting_foreground"
        tools:ignore="ImageContrastCheck" />

    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backI"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/txt"
            android:contentDescription="@string/app_name"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@mipmap/round_icon__round"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backI"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/app_name"
            android:textColor="@color/second"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_background"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/alarm_settings"
            android:textColor="@color/second"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck" />
        <ScrollView
            android:layout_width="320dp"
            android:layout_height="265dp"
            android:background="@drawable/menu_back"
            android:layout_below="@id/txt2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

         <LinearLayout
             android:id="@+id/paryersLayout"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fajr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fajr"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/fajr_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sunRise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sun_rise"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/sunrise_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/zohr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/zohr"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/zohr_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/asr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/asr"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/asr_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/maghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/maghrib"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/maghrib_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/eshaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/eshaa"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/eshaa_alarm"
                android:textSize="30sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/qiam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/quiam_lil"
                android:fontFamily="@font/cairo"
                android:contentDescription="@string/quiam_lil_alarm"
                android:textSize="30sp" />
         </LinearLayout>
        </ScrollView>

    <Button
        android:id="@+id/next"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="25sp"/>
        <Button
            android:id="@+id/previous"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/cairo"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </RelativeLayout>