<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backI"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:scaleX="1.52"
        android:scaleY="1.3"
        android:src="@mipmap/back_foreground" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backI"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/txt"
        android:contentDescription="@string/app_name"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@mipmap/round_icon__round"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backI"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="95dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/app_name"
        android:textColor="@color/second"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/chose_language"
        android:textColor="@color/second"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="330dp"
        android:layout_height="150dp"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_back">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:layout_gravity="start"
                    android:fontFamily="@font/cairo"
                    android:text="@string/arabic"
                    android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:minHeight="50dp"
                android:text="@string/english"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:minHeight="50dp"
                android:text="@string/french"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/turkish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/cairo"
            android:minHeight="50dp"
            android:text="@string/turkish"
            android:textSize="25sp" />
            <RadioButton
                android:id="@+id/indonesian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:minHeight="50dp"
                android:text="@string/indonesia"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/urdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:minHeight="50dp"
                android:text="@string/urdo"
                android:textSize="25sp" />
        </RadioGroup>

    </ScrollView>

    <TextView
        android:id="@+id/conditions"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:text="@string/conditions"
        android:layout_below="@+id/scroll"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditions"
        android:minHeight="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/checkBox"
        android:fontFamily="@font/cairo"
        android:textSize="23sp"/>

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/cairo"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/second"
        android:textSize="23sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/terms"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>