<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".LanguageActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:src="@drawable/settings2"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/txt2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:minHeight="60dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="89dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/app_name"
        android:textColor="@color/second"
        android:textSize="35sp" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/menu_back"
            android:nestedScrollingEnabled="true">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/arabic"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/english"
                    android:textSize="25sp" />
                <RadioButton
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/french"
                    android:textSize="25sp" />
                <RadioButton
                    android:id="@+id/turkish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/turkish"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/indonesian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/indonesia"
                    android:textSize="25sp" />
                <RadioButton
                    android:id="@+id/urdo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="55dp"
                    android:minHeight="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/urdo"
                    android:textSize="25sp" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="85dp"
            android:minHeight="75dp"
            android:layout_below="@+id/linear"
            android:layout_margin="10dp"
            android:fontFamily="@font/cairo"
            android:gravity="start"
            android:text="@string/conditions"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="45dp"
            android:minHeight="35dp"
            android:layout_below="@id/conditions"
            android:fontFamily="@font/cairo"
            android:layout_marginStart="10dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/second"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms"
            android:minHeight="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/checkBox"
            android:fontFamily="@font/cairo"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/next"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:maxHeight="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/cairo"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="25sp" />
     </RelativeLayout>