<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".LocationActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:src="@drawable/settings2"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/txt"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:minHeight="60dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="89dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/app_name"
        android:textColor="@color/second"
        android:textSize="35sp" />

    <TextView
            android:id="@+id/txt2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/text_background"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/location_settings"
            android:textColor="@color/second"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/location"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo"
        android:text="@string/automatic_location"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/finish"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:maxHeight="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/previous"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:maxHeight="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/cairo"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>